--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,16 +3,16 @@
     <h1>{{ title }}</h1>
     <article class="media content-section">
     <div class="media-body">
-        <h4>Intro</h4>
-        <p class="text-secondary">Welcome to the Cancer Bioinformatics TCR Analysis page </p>
-        <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae nulla dolor.</p>
+        <h4>Welcome</h4>
+        <p class="text-secondary">Welcome to the Cancer Bioinformatics TCR Analysis page! </p>
+        <p class="text-secondary">Navigate to the patient page to see analyses for each patient.</p>
     </div>
     </article>
     <article class="media content-section">
     <div class="media-body">
-        <h4>Data</h4>
-        <p class="text-secondary">Access the data is this repository</p>
-        <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae nulla dolor.</p>
+        <h4>Source code</h4>
+        <p class="text-secondary">Github repository for this website <a href="https://github.com/argutai/TCR-Application/tree/main" target="_blank">here</a></p> 
+        
     </div>
     </article>
     </article>
