--- a/app/templates/patients.html
+++ b/app/templates/patients.html
@@ -6,31 +6,35 @@
             <span class="input-group-addon"></span>
                 <select name="comp_select" class="selectpicker form-control">
                   <option value="" selected disabled hidden>Select a patient...</option>
-                  {% for o in data %}
-                  <option value="{{ o.name }}">{{ o.name }}</option>
+                  {% for name in patient_names %}
+                  <option value="{{ name }}">{{ name }}</option>
                   {% endfor %}
                 </select>
         </div>
         <button type="submit" class="btn btn-default">Go</button>
       </div>
     </form>
-    <h1>Patient: {{ patient }} </h1>
-    <p>Genomics: {{ obj.genomics }}</p>
-    <p>Hormad1: {{ obj.hormad1 }}</p>
+    <p></p>
+    
+    {% for patient_obj in patient_obj %}
+      <h1>Patient: {{ patient_obj.patient_id }} </h1>
+      <p>Genomics: {{ patient_obj.genomics }}</p>
+      <p>Hormad1: {{ patient_obj.hormad1 }}</p>
   
-    {% for figure in obj.figures %}
-        <div>
-            <div>
-              <div class="media-body">
-                <img src="static/KCL-content/figures/Sample_bubbles/{{ figure.Sample }}.png" width="500" height="400">
-                <h3>{{ figure.Sample }}</h3>
-                <p class="text-secondary">Type: {{ figure.type }}, Protocol: {{ figure.protocol }}</p>
-                <!-- <p class="text-secondary">Pool ID: {{ figure.pool_id }}</p> -->
+      {% for figure in patient_obj.figures %}
+          <div>
+              <div>
+                <div class="media-body">
+                  <h3>{{ figure.pool_id }}</h3>
+                  <img src="static/KCL-content/figures/Sample_bubbles/{{ figure.Sample }}.svg" width="500" height="500">
+                  <p class="text-secondary">Sample: {{ figure.Sample }}</p>
+                  <p class="text-secondary">Expanded clonotypes (descending): {{ figure.expanded }}</p>
+                  <p class="text-secondary"> </p>
+                </div>
               </div>
             </div>
-          </div>
+      {% endfor %}
     {% endfor %}
-
 {% endblock content %}
 
 <!-- patient_id, sample, protocol, pool_id, type -->
