add ip/data hits page, remove overview page, add project landscape page

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -27,8 +27,9 @@
                 <div class="collapse navbar-collapse" id="navbarToggle">
                   <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
-                    <a class="nav-item nav-link" href="{{ url_for('overview') }}">Overview</a>
+                    <!-- <a class="nav-item nav-link" href="{{ url_for('overview') }}">Overview</a> -->
                     <a class="nav-item nav-link" href="{{ url_for('patients') }}">Patients</a>
+                    <a class="nav-item nav-link" href="{{ url_for('project_landscape') }}">Project Landscape</a>
                   </div>
                   <!-- Navbar Right Side -->
                   <!-- <div class="navbar-nav">
