--- a/app/static/main.css
+++ b/app/static/main.css
@@ -78,3 +78,13 @@ body {
   .account-heading {
     font-size: 2.5rem;
   }
+
+  table, th, td {
+    border: 1px solid white;
+    /* border-collapse: collapse; */
+    text-align: center;
+    background-color: #94b8dc;
+    border: 1px solid;
+    table-layout: fixed;
+    width: 110px;
+  }
