--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,26 +3,19 @@
     <h1>{{ title }}</h1>
     <article class="media content-section">
     <div class="media-body">
-        <h4>Welcome</h4>
-        <p class="text-secondary">Welcome to the Cancer Bioinformatics TCR Analysis page! </p>
-        <p class="text-secondary">Navigate to the patient page to see analyses for each patient.</p>
+        <h4>TCR Project</h4>
+        <p class="text-secondary">Members: Abigail Gutai, Anita Grigoriadis, Ernesto Lopez, Gregory Verghese, Roberta Liccardo, and Yin Wu</p>
+        <p class="text-secondary">This is a platform (in development) to host resources and analyses for the TCR project.
     </div>
     </article>
     <article class="media content-section">
     <div class="media-body">
-        <h4>Source code</h4>
-        <p class="text-secondary">Github repository for this website <a href="https://github.com/argutai/TCR-Application/tree/main" target="_blank">here</a></p> 
-        
+        <h4>Github repositories</h4>
+        <ul>
+            <li><a href="https://github.com/argutai/TCR-Application/tree/main" target="_blank">Website source code</a></li>
+            <li><a href="https://github.com/argutai/TCR-analysis/tree/main" target="_blank">Data analysis python code</a></li>
+            <li>Request access for Data</li>
+        </ul>
     </div>
     </article>
-    </article>
-    <article class="media content-section">
-    <div class="media-body">
-        <h4>Analysis</h4>
-        <p class="text-secondary">Access the data analysis code in this repository</p>
-        <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae nulla dolor.</p>
-    </div>
-    </article>
-    </article>
-
 {% endblock content %}
