--- a/app/templates/patients.html
+++ b/app/templates/patients.html
@@ -4,7 +4,7 @@
       <div class="form-group">
         <div class="input-group">
             <span class="input-group-addon"></span>
-                <select name="comp_select" class="selectpicker form-control">
+                <select name="patient_select" class="selectpicker form-control">
                   <option value="" selected disabled hidden>Select a patient...</option>
                   {% for name in patient_names %}
                   <option value="{{ name }}">{{ name }}</option>
