add extra colour_by option in overview

--- a/app/templates/overview.html
+++ b/app/templates/overview.html
@@ -13,6 +13,7 @@
                 <option value="bubble_overlay" selected disabled hidden>Colour by...</option>
                 <option value="bubble_overlay_EI">expansion index</option>
                 <option value="bubble_overlay_TCT">T cell total</option>
+                <option value="bubble_overlay_in_control">present in control</option>
               </select>
       </div>
       <button type="submit" class="btn btn-default">Go</button>
