add links to data and content repos

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,9 +12,10 @@
     <div class="media-body">
         <h4>Github repositories</h4>
         <ul>
-            <li><a href="https://github.com/argutai/TCR-Application/tree/main" target="_blank">Website source code</a></li>
-            <li><a href="https://github.com/argutai/TCR-analysis/tree/main" target="_blank">Data analysis python code</a></li>
-            <li>Request access for Data</li>
+            <li><a href="https://github.com/argutai/TCR-Application/tree/main" target="_blank">Website source code (public)</a></li>
+            <li><a href="https://github.com/argutai/TCR-analysis/tree/main" target="_blank">Data analysis python code (public)</a></li>
+            <li><a href="https://github.com/argutai/KCL-Raw-data/tree/main" target="_blank">Raw RNAseq data (private)</a></li>
+            <li><a href="https://github.com/argutai/KCL-Content/tree/main" target="_blank">Content and figures (private)</a></li>
         </ul>
     </div>
     </article>
