max height for overview figs

--- a/app/templates/overview.html
+++ b/app/templates/overview.html
@@ -21,9 +21,9 @@
   </form>
   <div class="media-body">
   <h1> </h1>
-  <h4 class="text-secondary">Bubble charts</h4>
-  <img style="width: 100%;" src="static/KCL-content/figures/expansion_index/{{ colour_by }}.svg">
-
+  <img style="width: 100%; max-height: 600px" src="static/KCL-content/figures/expansion_index/{{ colour_by }}.svg">
+  </div>
+</article>
   <!-- <article class="media content-section">
     <div class="media-body">   
       <p class="text-secondary">Bubble overlay</p>
