--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,7 +4,7 @@
     <article class="media content-section">
     <div class="media-body">
         <h4>TCR Project</h4>
-        <p class="text-secondary">Members: Abigail Gutai, Anita Grigoriadis, Ernesto Lopez, Gregory Verghese, Roberta Liccardo, and Yin Wu</p>
+        <p class="text-secondary">Members: Abigail Gutai, Anita Grigoriadis, Ernesto Lopez, Gregory Verghese, Jelmar Quist, Roberta Liccardo, and Yin Wu</p>
         <p class="text-secondary">This is a platform (in development) to host resources and analyses for the TCR project.
     </div>
     </article>
