--- a/app/templates/overview.html
+++ b/app/templates/overview.html
@@ -10,10 +10,10 @@
       <div class="input-group">
           <span class="input-group-addon"></span>
               <select name="colour_by_select" class="selectpicker form-control">
-                <option value="bubble_overlay" selected disabled hidden>Colour by...</option>
-                <option value="bubble_overlay_EI">expansion index</option>
-                <option value="bubble_overlay_TCT">T cell total</option>
-                <option value="bubble_overlay_in_control">present in control</option>
+                <!-- <option value="bubble_overlay" selected disabled hidden>Colour by...</option> -->
+                {% for fig in fig_list %}
+                  <option value={{ fig.file_name }}> {{ fig.figure_name }} </option>
+                {% endfor %}
               </select>
       </div>
       <button type="submit" class="btn btn-default">Go</button>
@@ -21,10 +21,15 @@
   </form>
   <div class="media-body">
   <h1> </h1>
-  <img style="width: 100%; max-height: 600px" src="static/KCL-content/figures/expansion_index/{{ colour_by }}.svg">
+  <img style="width: 100%; max-height: 600px" src="static/KCL-content/figures/expansion_index/{{ fig.file_name }}.svg">
   </div>
 </article>
-  <!-- <article class="media content-section">
+  <article class="media content-section">
+    <div class="media-body">   
+      <p class="text-secondary">{{ fig.legend }}</p>
+  </article>
+
+<!-- <article class="media content-section">
     <div class="media-body">   
       <p class="text-secondary">Bubble overlay</p>
       <form method="POST" action="{{ url_for('overview') }}">
