Add doc of truth page to display latest changes from sharepoint doc

--- a/app/templates/bulkRNA.html
+++ b/app/templates/bulkRNA.html
@@ -5,7 +5,7 @@
 </center>
 <article class="media content-section">
   <div class="media-body">    
-  <form class="form-inline" method="POST" action="{{ url_for('overview') }}">
+  <form class="form-inline" method="POST" action="{{ url_for('bulkRNA') }}">
     <div class="form-group">
       <div class="input-group">
           <span class="input-group-addon"></span>
@@ -32,7 +32,7 @@
 <!-- <article class="media content-section">
     <div class="media-body">   
       <p class="text-secondary">Bubble overlay</p>
-      <form method="POST" action="{{ url_for('overview') }}">
+      <form method="POST" action="{{ url_for('bulkRNA') }}">
         <textarea id="legend" name="legend">{{ legend }}</textarea>
         <br>
         <input type="submit" value="Save changes">
