--- a/app/templates/hits.html
+++ b/app/templates/hits.html
@@ -7,6 +7,7 @@
           <th>Total IPs</th> 
           <th>Home</th>
           <th>Patients</th>
+          <th>bulkRNA</th>
           <th>Projects</th>
         </tr>
         {% for day_hits in day_hits %}
@@ -15,6 +16,7 @@
             <td> {{ day_hits.ip2|length }} </td>
             <td> {{ day_hits.home }} </td>
             <td> {{ day_hits.patients }} </td>
+            <td> {{ day_hits.bulkRNA }} </td>
             <td> {{ day_hits.prj_landscape }} </td>
         </tr>
         {% endfor %}
