--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -21,9 +21,9 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
-              <a class="nav-item nav-link" href="{{ url_for('bulkRNA') }}">bulkRNA</a>
+              <a class="nav-item nav-link" href="{{ url_for('doc_of_truth') }}">Docs</a>
+              <a class="nav-item nav-link" href="{{ url_for('bulkRNA') }}">BulkRNA</a>
               <a class="nav-item nav-link" href="{{ url_for('patients') }}">Patients</a>
-              <a class="nav-item nav-link" href="{{ url_for('project_landscape') }}">Project Landscape</a>
             </div>
           </div>
         </div>
