--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -22,7 +22,8 @@
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
               <a class="nav-item nav-link" href="{{ url_for('doc_of_truth') }}">Docs</a>
-              <a class="nav-item nav-link" href="{{ url_for('bulkRNA') }}">BulkRNA</a>
+              <a class="nav-item nav-link" href="{{ url_for('bulkRNA') }}">Bubble Charts</a>
+              <a class="nav-item nav-link" href="{{ url_for('motifs') }}">Motif Analysis</a>
               <a class="nav-item nav-link" href="{{ url_for('patients') }}">Patients</a>
             </div>
           </div>
