track hits to docs page

--- a/app/templates/hits.html
+++ b/app/templates/hits.html
@@ -6,6 +6,7 @@
           <th>Date</th>
           <th>Total IPs</th> 
           <th>Home</th>
+          <th>Docs</th>
           <th>Patients</th>
           <th>bulkRNA</th>
           <th>motifs</th>
@@ -15,6 +16,7 @@
             <td> {{ day_hits.day }} </td>
             <td> {{ day_hits.ip2|length }} </td>
             <td> {{ day_hits.home }} </td>
+            <td> {{ day_hits.docs }} </td>
             <td> {{ day_hits.patients }} </td>
             <td> {{ day_hits.bulkRNA }} </td>
             <td> {{ day_hits.motifs }} </td>
