add repr to IpView to show IPs

--- a/app/templates/hits.html
+++ b/app/templates/hits.html
@@ -14,7 +14,7 @@
         {% for day_hits in day_hits %}
         <tr>
             <td> {{ day_hits.day }} </td>
-            <td> {{ day_hits.ip2|length }} </td>
+            <td> {{ day_hits.ip2 }} </td>
             <td> {{ day_hits.home }} </td>
             <td> {{ day_hits.docs }} </td>
             <td> {{ day_hits.patients }} </td>
