add CDR3 ordination page

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -23,8 +23,8 @@
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
               <a class="nav-item nav-link" href="{{ url_for('doc_of_truth') }}">Docs</a>
               <a class="nav-item nav-link" href="{{ url_for('bulkRNA') }}">Bubble Charts</a>
+              <a class="nav-item nav-link" href="{{ url_for('TCRord') }}">CDR3 ordination</a>
               <a class="nav-item nav-link" href="{{ url_for('motifs') }}">Motif Analysis</a>
-              <a class="nav-item nav-link" href="{{ url_for('patients') }}">Patients</a>
             </div>
           </div>
         </div>
