require CDR3 ord figs as png instead of svg, it's faster

--- a/app/templates/TCRord.html
+++ b/app/templates/TCRord.html
@@ -28,7 +28,7 @@
   </form>
   <div class="media-body">
   <h1> </h1>
-  <img style="width: 100%; max-height: 600px" src="static/KCL-content/figures/ordinations/{{ file_name }}.svg">
+  <img style="width: 100%; max-height: 600px" src="static/KCL-content/figures/ordinations/{{ file_name }}.png">
   </div>
 </article>
 <article class="media content-section">
