--- a/app/templates/hits.html
+++ b/app/templates/hits.html
@@ -8,7 +8,7 @@
           <th>Home</th>
           <th>Docs</th>
           <th>Patients</th>
-          <th>bulkRNA</th>
+          <th>bubbles</th>
           <th>motifs</th>
         </tr>
         {% for day_hits in day_hits %}
@@ -18,7 +18,7 @@
             <td> {{ day_hits.home }} </td>
             <td> {{ day_hits.docs }} </td>
             <td> {{ day_hits.patients }} </td>
-            <td> {{ day_hits.bulkRNA }} </td>
+            <td> {{ day_hits.bubbles }} </td>
             <td> {{ day_hits.motifs }} </td>
         </tr>
         {% endfor %}
