--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="https://github.com/argutai/TCR-Application/tree/main" target="_blank">Website source code (public)</a></li>
             <li><a href="https://github.com/argutai/TCR-analysis/tree/main" target="_blank">Data analysis python code (public)</a></li>
-            <li><a href="https://github.com/argutai/KCL-Raw-data/tree/main" target="_blank">Raw bulkRNAseq data (private)</a></li>
+            <li><a href="https://github.com/argutai/KCL-Raw-data/tree/main" target="_blank">Raw bulkDNAseq data (private)</a></li>
             <li><a href="https://github.com/argutai/KCL-Content/tree/main" target="_blank">Content and figures (private)</a></li>
         </ul>
     </div>
