--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -22,9 +22,8 @@
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
               <a class="nav-item nav-link" href="{{ url_for('doc_of_truth') }}">Docs</a>
-              <a class="nav-item nav-link" href="{{ url_for('bulkRNA') }}">Bubble Charts</a>
-              <a class="nav-item nav-link" href="{{ url_for('TCRord') }}">CDR3 ordination</a>
-              <a class="nav-item nav-link" href="{{ url_for('motifs') }}">Motif Analysis</a>
+              <a class="nav-item nav-link" href="{{ url_for('library') }}">Sample library</a>
+              <a class="nav-item nav-link" href="{{ url_for('TCRdist') }}">TCRdist</a>
             </div>
           </div>
         </div>
