change TCR docs from page rendered by word doc (very slow and awkward) to hosted Notion page

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -21,7 +21,8 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
-              <a class="nav-item nav-link" href="{{ url_for('doc_of_truth') }}">Docs</a>
+              <a class="nav-item nav-link" href="https://tcr-docs.notion.site/TCR-Project-Documentation-5b6476ada760426eb2f49b6dc6cdeb58">Docs</a>
+              <!-- <a class="nav-item nav-link" href="{{ url_for('doc_of_truth') }}">Docs</a> -->
               <a class="nav-item nav-link" href="{{ url_for('library') }}">Sample library</a>
               <a class="nav-item nav-link" href="{{ url_for('TCRdist') }}">TCRdist</a>
             </div>
