add SC page and BD-pipeline reports

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -25,6 +25,7 @@
               <!-- <a class="nav-item nav-link" href="{{ url_for('doc_of_truth') }}">Docs</a> -->
               <a class="nav-item nav-link" href="{{ url_for('library') }}">Sample library</a>
               <a class="nav-item nav-link" href="{{ url_for('TCRdist') }}">TCRdist</a>
+              <a class="nav-item nav-link" href="{{ url_for('SChome') }}">SingleCell</a>
             </div>
           </div>
         </div>
